Fix for topcrashers bug 143118 and bug 146891 - prevent continued deserialization after a a deserialization failure of the XUL PD by aborting on failure, also, ensure that that propagates up so we can catch it. Fix an oops (trying to remove the fasl file before closing the stream to it) and hack around a nsLocalFileWin bug (bug 150156) in the process. r=waterson, sr=brendan, a=asa